# md2sheet

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  pylint.yml  python-publish.yml  scorecard.yml  synopsys-io.yml
example/: example.md
src/md2sheet/: __main__.py  md2sheet.py
