[tool.poetry]
name = "md2sheet"
version = "0.1.1"
description = "A cli tool for convert markdown into sheet(xlsx)."
authors = ["Yingjie Shang <me@shangcode.cn>"]
license = "MIT"
readme = "README.md"
keywords = [
    "convert",
    "structured",
    "markdown",
    "spreadsheet",
    "csv",
    "markdown_2_json",
    "typer",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Console',
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    'Topic :: File Formats',
    'Topic :: Office/Business :: Financial :: Spreadsheet',
    'Topic :: Text Processing :: Markup :: Markdown',
    'Topic :: Utilities',
]
homepage = "https://github.com/shangcode/md2sheet"
repository = "https://github.com/shangcode/md2sheet"

[tool.poetry.scripts]
md2sheet = "md2sheet.md2sheet:app"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
typer = {extras = ["all"], version = "^0.9.0"}
markdown-to-json = "^2.1.0"
pylint = "^3.0.2"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
